fix icon alignment

--- a/src/scss/04_Components/_form-field.scss
+++ b/src/scss/04_Components/_form-field.scss
@@ -14,6 +14,8 @@
 
             .tooltip {
                 line-height: 1;
+                display: inline-flex;
+                align-items: center;
                 @include ml(sm);
             }
         }
